projects/giri/clusternetworkpolicies/aug9-p1.yaml
apiVersion: security.k8smgmt.io/v3
kind: ClusterNetworkPolicy
metadata:
  name: aug9-p1
  project: giri
spec:
  rules:
  - name: aug-cnr
    version: v1
  version: v1
