projects/giri/clusternetworkpolicies/aug9-p2.yaml
apiVersion: security.k8smgmt.io/v3
kind: ClusterNetworkPolicy
metadata:
  name: aug9-p2
  project: giri
spec:
  rules:
  - name: aug-cnr1
    version: v2
  version: v1
