projects/giri/clusternetworkpolicies/cluster-pol3.yaml
apiVersion: security.k8smgmt.io/v3
kind: ClusterNetworkPolicy
metadata:
  name: cluster-pol3
  project: giri
spec:
  rules:
  - name: cluster-rule3
    version: v3
  sharing:
    enabled: true
    projects:
    - name: aa-1
    - name: aa-10
    - name: aa-11
    - name: aa-12
    - name: aa-13
    - name: aa-14
    - name: aa-15
    - name: aa-16
    - name: aa-17
    - name: aa-18
    - name: aa-19
    - name: aa-2
    - name: aa-20
    - name: aa-21
    - name: aa-22
    - name: aa-23
    - name: aa-24
    - name: aa-25
    - name: aa-26
    - name: aa-27
    - name: aa-28
    - name: aa-29
    - name: aa-3
    - name: aa-30
    - name: aa-4
    - name: aa-5
    - name: aa-6
    - name: aa-7
    - name: aa-8
    - name: aa-9
    - name: akash
    - name: ankit
    - name: ankurp
    - name: ankurp2
    - name: avinash
    - name: bb-1
    - name: bb-2
    - name: bb-3
    - name: bb-4
    - name: bb-5
    - name: c1
    - name: cbre-team-x
    - name: cbredemo-b-team
    - name: cc-1
    - name: cc-2
    - name: cc-3
    - name: cc-4
    - name: cc-5
    - name: clustertemplate
    - name: convert2managed-import-eks
    - name: ctnewdemo
    - name: ctuserap
    - name: dd-1
    - name: dd-2
    - name: dd-3
    - name: dd-4
    - name: dd-5
    - name: dd1
    - name: deepakmks
    - name: defaultproject
    - name: delete-test
    - name: demo
    - name: demo-rafay
    - name: demo-vishal-shetty
    - name: dfbgf
    - name: ee-1
    - name: ee-10
    - name: ee-2
    - name: ee-3
    - name: ee-4
    - name: ee-5
    - name: ee-6
    - name: ee-7
    - name: ee-8
    - name: ee-9
    - name: fayas
    - name: fayas-workloadtemplatesharing
    - name: gatewayankurp
    - name: gaurav
    - name: gautham
    - name: infra-base
    - name: infra-team-A
    - name: infra-team-B
    - name: integration-testing
    - name: kalyan-stage
    - name: krishna
    - name: lan-preview
    - name: madhuproject
    - name: madhuproject2
    - name: managed-storage
    - name: may-scale-preview
    - name: migration-16x
    - name: mohan
    - name: my-projct0000
    - name: namespace-proj1
    - name: namespace-proj2
    - name: nikhil
    - name: nikhil-01
    - name: nov22
    - name: openshift-test
    - name: payes
    - name: phani-project
    - name: phani-pwc-oct13
    - name: phani-quota1
    - name: phani-quota2
    - name: phani-quota3
    - name: phani-quota4-cli
    - name: phani-v3project
    - name: poornima
    - name: postmantestproject-427
    - name: prjtf1
    - name: qe-scale
    - name: rakshith-ws
    - name: rakshith-ws-dec
    - name: ram-project
    - name: ram-project1
    - name: repo
    - name: sachin
    - name: sandbox-project
    - name: sangeeth-training
    - name: scale
    - name: share
    - name: shobhit
    - name: shobhit1
    - name: shobhit2
    - name: shobhitroles
    - name: srikar
    - name: system-sync
    - name: system-sync-1
    - name: system-sync-shared
    - name: t1
    - name: templateuserankurp
    - name: test
    - name: test-infra
    - name: test-vishal-shetty
    - name: testingsso
    - name: testprj
    - name: tf-phani-project-quota1
    - name: tf-sanity-0926
    - name: upgrade
    - name: v2
    - name: v3
    - name: vasu
    - name: venkat
    - name: venkatp
    - name: vihari
    - name: vishal
    - name: vyshakhg
    - name: ys
  version: pol3-v1
