projects/giri/clusternetworkpolicies/ipp1.yaml
apiVersion: security.k8smgmt.io/v3
kind: ClusterNetworkPolicy
metadata:
  name: ipp1
  project: giri
spec:
  rules:
  - name: ipc1
    version: v2
  version: v1
