projects/giri/clusternetworkpolicies/jan19-p1.yaml
apiVersion: security.k8smgmt.io/v3
kind: ClusterNetworkPolicy
metadata:
  name: jan19-p1
  project: giri
spec:
  rules:
  - name: jan19-r1
    version: v1
  version: v1
