projects/giri/clusternetworkpolicies/july31-cnp.yaml
apiVersion: security.k8smgmt.io/v3
kind: ClusterNetworkPolicy
metadata:
  name: july31-cnp
  project: giri
spec:
  rules:
  - name: july31-cnr
    version: v1
  version: v1
