projects/giri/clusternetworkpolicies/july31-cnp1.yaml
apiVersion: security.k8smgmt.io/v3
kind: ClusterNetworkPolicy
metadata:
  name: july31-cnp1
  project: giri
spec:
  rules:
  - name: july31-cnr1
    version: version1
  version: v1
