projects/giri/clusternetworkpolicies/may.yaml
apiVersion: security.k8smgmt.io/v3
kind: ClusterNetworkPolicy
metadata:
  name: may
  project: giri
spec:
  rules:
  - name: may
    version: v1
  version: v1
