projects/giri/clusternetworkpolicies/mysql-policy.yaml
apiVersion: security.k8smgmt.io/v3
kind: ClusterNetworkPolicy
metadata:
  name: mysql-policy
  project: giri
spec:
  rules:
  - name: mysql-rule
    version: mysql-rule-v1
  version: v1
