projects/giri/clusternetworkpolicies/nov-cluster-policy.yaml
apiVersion: security.k8smgmt.io/v3
kind: ClusterNetworkPolicy
metadata:
  name: nov-cluster-policy
  project: giri
spec:
  rules:
  - name: nov-cluster-rule
    version: v1
  version: version1
