projects/giri/clusternetworkpolicies/nov-pol1.yaml
apiVersion: security.k8smgmt.io/v3
kind: ClusterNetworkPolicy
metadata:
  name: nov-pol1
  project: giri
spec:
  rules:
  - name: nov-cluster-rule
    version: v1
  version: v1
