projects/giri/clusternetworkpolicies/p1.yaml
apiVersion: security.k8smgmt.io/v3
kind: ClusterNetworkPolicy
metadata:
  name: p1
  project: giri
spec:
  rules:
  - name: rule1
    version: v1
  version: v1
