projects/giri/clusternetworkpolicies/template.yaml
apiVersion: security.k8smgmt.io/v3
kind: ClusterNetworkPolicy
metadata:
  name: template
  project: giri
spec:
  rules:
  - name: rule6
    version: v6
  version: v1
