projects/giri/clusternetworkpolicies/varun-clusterwide-policy.yaml
apiVersion: security.k8smgmt.io/v3
kind: ClusterNetworkPolicy
metadata:
  name: varun-clusterwide-policy
  project: giri
spec:
  rules:
  - name: varun-clusterwide-rule
    version: v1
  version: v1
